--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -125,156 +125,156 @@ cards:
 
 # Only shown for UK
 
-  - heading: Patients admitted to hospital
-    cardType: multiAreaStatic
-    locationAware:
-      included: 
-        areaType:
-          - overview
+  # - heading: Patients admitted to hospital
+  #   cardType: multiAreaStatic
+  #   locationAware:
+  #     included: 
+  #       areaType:
+  #         - overview
 
-    fullWidth: true
-    abstract: >
-      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not
-      updated every day by all four nations and the figures are not comparable as Wales
-      include suspected COVID-19 patients while the other nations include only confirmed
-      cases.
+  #   fullWidth: true
+  #   abstract: >
+  #     Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not
+  #     updated every day by all four nations and the figures are not comparable as Wales
+  #     include suspected COVID-19 patients while the other nations include only confirmed
+  #     cases.
 
-    download:
-      - newAdmissions
-      - cumAdmissions
+  #   download:
+  #     - newAdmissions
+  #     - cumAdmissions
 
-    options:
-      type: radio
-      heading: null
-      choices:
-        - By nation
-        - UK total
+  #   options:
+  #     type: radio
+  #     heading: null
+  #     choices:
+  #       - By nation
+  #       - UK total
     
-    By nation:
+  #   By nation:
 
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: stack
-          colours: [0, 9, 3, 10] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+  #     tabs:
+  #       - heading: Daily
+  #         tabType: chart
+  #         barType: stack
+  #         colours: [0, 9, 3, 10] # areaNames in alphabetical order
+  #         params:
+  #           - key: areaType
+  #             sign: "="
+  #             value: nation
 
-          fields:
-            - label: ""
-              value: newAdmissions
-              tooltip: Daily number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false
+  #         fields:
+  #           - label: ""
+  #             value: newAdmissions
+  #             tooltip: Daily number of COVID-19 patients admitted to hospital
+  #             type: bar
+  #             rollingAverage: false
 
-        - heading: Cumulative
-          tabType: chart
-          barType: stack
-          colours: [0, 9, 3, 10] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+  #       - heading: Cumulative
+  #         tabType: chart
+  #         barType: stack
+  #         colours: [0, 9, 3, 10] # areaNames in alphabetical order
+  #         params:
+  #           - key: areaType
+  #             sign: "="
+  #             value: nation
 
-          fields:
-            - label: ""
-              value: cumAdmissions
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false
+  #         fields:
+  #           - label: ""
+  #             value: cumAdmissions
+  #             tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+  #             type: bar
+  #             rollingAverage: false
 
-        - heading: Data
-          tabType: table
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+  #       - heading: Data
+  #         tabType: table
+  #         params:
+  #           - key: areaType
+  #             sign: "="
+  #             value: nation
 
-          fields:
-            - label: Date reported
-              value: date
-              type: date
-              tooltip: Date reported by healthcare providers
+  #         fields:
+  #           - label: Date reported
+  #             value: date
+  #             type: date
+  #             tooltip: Date reported by healthcare providers
 
-            - label: daily
-              value: newAdmissions
-              type: numeric
-              tooltip: Daily number of COVID-19 patients admitted to hospital
+  #           - label: daily
+  #             value: newAdmissions
+  #             type: numeric
+  #             tooltip: Daily number of COVID-19 patients admitted to hospital
 
-            - label: total
-              value: cumAdmissions
-              type: numeric
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+  #           - label: total
+  #             value: cumAdmissions
+  #             type: numeric
+  #             tooltip: Cumulative total number of COVID-19 patients admitted to hospital
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
+  #       - heading: About 
+  #         tabType: metadata
+  #         filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
 
-    UK total:
+  #   UK total:
 
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: stack
-          colours: [0] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
+  #     tabs:
+  #       - heading: Daily
+  #         tabType: chart
+  #         barType: stack
+  #         colours: [0] # areaNames in alphabetical order
+  #         params:
+  #           - key: areaType
+  #             sign: "="
+  #             value: overview
 
-          fields:
-            - label: ""
-              value: newAdmissions
-              tooltip: Daily number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: 
-                window: 7
-                clipEnd: 3 
+  #         fields:
+  #           - label: ""
+  #             value: newAdmissions
+  #             tooltip: Daily number of COVID-19 patients admitted to hospital
+  #             type: bar
+  #             rollingAverage: 
+  #               window: 7
+  #               clipEnd: 3 
 
-        - heading: Cumulative
-          tabType: chart
-          barType: stack
-          colours: [0] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
+  #       - heading: Cumulative
+  #         tabType: chart
+  #         barType: stack
+  #         colours: [0] # areaNames in alphabetical order
+  #         params:
+  #           - key: areaType
+  #             sign: "="
+  #             value: overview
 
-          fields:
-            - label: ""
-              value: cumAdmissions
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false
+  #         fields:
+  #           - label: ""
+  #             value: cumAdmissions
+  #             tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+  #             type: bar
+  #             rollingAverage: false
 
-        - heading: Data
-          tabType: table
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
+  #       - heading: Data
+  #         tabType: table
+  #         params:
+  #           - key: areaType
+  #             sign: "="
+  #             value: overview
 
-          fields:
-            - label: Date reported
-              value: date
-              type: date
-              tooltip: Date reported by healthcare providers
+  #         fields:
+  #           - label: Date reported
+  #             value: date
+  #             type: date
+  #             tooltip: Date reported by healthcare providers
 
-            - label: daily
-              value: newAdmissions
-              type: numeric
-              tooltip: Daily number of COVID-19 patients admitted to hospital
+  #           - label: daily
+  #             value: newAdmissions
+  #             type: numeric
+  #             tooltip: Daily number of COVID-19 patients admitted to hospital
 
-            - label: total
-              value: cumAdmissions
-              type: numeric
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+  #           - label: total
+  #             value: cumAdmissions
+  #             type: numeric
+  #             tooltip: Cumulative total number of COVID-19 patients admitted to hospital
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
+  #       - heading: About 
+  #         tabType: metadata
+  #         filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
 
 ##############################################################################################################################
 
