Healthcare - attempt to fix legend order for UK patients admitted card

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -217,7 +217,7 @@ cards:
       tabs:
         - heading: Daily
           tabType: chart
-          barType: stack
+          barType: normal
           params:
             - key: areaType
               sign: "="
