--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -804,95 +804,209 @@ cards:
 # {{ StartDevOnlyBlock}}
 # not shown for UK
 
-  # - heading: Daily deaths by date of death (Dev Only)
-  #   cardType: chart
-  #   locationAware:
-  #     included:
-  #       areaType:
-  #         - nation
-  #         - region
-  #     excluded:
-  #       areaName:
-  #         - Northern Ireland
-  #         - Scotland
-  #         - Wales
+  - heading: Daily deaths by date of death (Dev Only)
+    cardType: chart
+    locationAware:
+      included:
+        areaType:
+          - nation
+          - region
+      excluded:
+        areaName:
+          - Northern Ireland
+          - Scotland
+          - Wales
 
-  #   fullWidth: true
-  #   abstract: > 
-  #     Number of deaths of people who had had a positive test result for COVID-19. The actual cause of 
-  #     death may not be COVID-19 in all cases. People who died from COVID-19 but had not tested positive 
-  #     are not included.  Options allow exploration of deaths that occurred within specified durations 
-  #     from the first positive test. 
+    fullWidth: true
+    abstract: > 
+      Number of deaths of people who had had a positive test result for COVID-19. The actual cause of 
+      death may not be COVID-19 in all cases. People who died from COVID-19 but had not tested positive 
+      are not included.  Options allow exploration of deaths that occurred within fixed durations from 
+      the first positive test. 
 
-  #   download:
-  #     - newDeathsByDeathDate
-  #     - cumDeathsByDeathDate
-  #     - newDeaths28DaysByDeathDate
-  #     - cumDeaths28DaysByDeathDate
-  #     - newDeaths60DaysByDeathDate
-  #     - cumDeaths60DaysByDeathDate
+    download:
+      - newDeathsByDeathDate
+      - cumDeathsByDeathDate
+      - newDeaths28DaysByDeathDate
+      - cumDeaths28DaysByDeathDate
+      - newDeaths60DaysByDeathDate
+      - cumDeaths60DaysByDeathDate
 
-  #   options:
-  #     type: radio
-  #     heading: null
-  #     choices:
-  #       - All 
-  #       - Within 60 days
-  #       - Within 28 days
+    options:
+      type: radio
+      heading: null
+      choices:
+        - All 
+        - Within 60 days
+        - Within 28 days
     
-  #   Within 28 days:
+    All:
 
-  #     tabs: 
-  #       - heading: Daily
-  #         tabType: chart
-  #         barType: normal
-  #         fields:
-  #           - label: Number of deaths
-  #             value: newDeaths28DaysByDeathDate
-  #             tooltip: Daily number of deaths within 28 days of positive test by date of death
-  #             type: bar
-  #             colour: 0
-  #             rollingAverage: false
+      tabs: 
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Number of deaths
+              value: newDeathsByDeathDate
+              tooltip: Daily number of deaths following a positive test by date of death
+              type: bar
+              colour: 0
+              rollingAverage: false
 
-  #           - label: Deaths (7-day average)
-  #             value: newDeaths28DaysByDeathDate
-  #             tooltip: 7 day rolling average of the daily number of deaths within 28 days of positive test
-  #             type: line
-  #             colour: 3
-  #             fill: false
-  #             rollingAverage: true
+            - label: Deaths (7-day average)
+              value: newDeathsByDeathDate
+              tooltip: 7 day rolling average of the daily number of deaths following a positive test
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3
                   
-  #       - heading: Cumulative
-  #         tabType: chart
-  #         fields:
-  #           - label: Number of deaths
-  #             value: cumDeaths28DaysByDeathDate
-  #             tooltip: Cumulative total number of deaths within 28 days of positive test by date of death
-  #             type: bar
-  #             colour: 0
-  #             rollingAverage: false
+        - heading: Cumulative
+          tabType: chart
+          fields:
+            - label: Number of deaths
+              value: cumDeathsByDeathDate
+              tooltip: Cumulative total number of deaths following a positive test by date of death
+              type: bar
+              colour: 0
+              rollingAverage: false
                   
-  #       - heading: Data
-  #         tabType: table
-  #         fields:
-  #           - label: Date of death
-  #             value: date
-  #             type: date
-  #             tooltip: Date on which the death occurred
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date of death
+              value: date
+              type: date
+              tooltip: Date on which the death occurred
 
-  #           - label: Daily deaths
-  #             value: newDeaths28DaysByDeathDate
-  #             type: numeric
-  #             tooltip: Daily number of deaths within 28 days of positive test by date of death
+            - label: Daily deaths
+              value: newDeathsByDeathDate
+              type: numeric
+              tooltip: Daily number of deaths following a positive test by date of death
 
-  #           - label: Cumulative deaths
-  #             value: cumDeaths28DaysByDeathDate
-  #             type: numeric
-  #             tooltip: Cumulative total number of deaths within 28 days of positive test by date of death
+            - label: Cumulative deaths
+              value: cumDeathsByDeathDate
+              type: numeric
+              tooltip: Cumulative total number of deaths following a positive test by date of death
 
-  #       - heading: About 
-  #         tabType: metadata
-  #         filename: cardMetadata/deaths/cardDeaths28DaysTimeSeries.md
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardDeathsTimeSeries.md
+
+    Within 60 days:
+
+      tabs: 
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Number of deaths
+              value: newDeaths60DaysByDeathDate
+              tooltip: Daily number of deaths within 60 days of positive test by date of death
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Deaths (7-day average)
+              value: newDeaths60DaysByDeathDate
+              tooltip: 7 day rolling average of the daily number of deaths within 60 days of positive test
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3
+                  
+        - heading: Cumulative
+          tabType: chart
+          fields:
+            - label: Number of deaths
+              value: cumDeaths60DaysByDeathDate
+              tooltip: Cumulative total number of deaths within 60 days of positive test by date of death
+              type: bar
+              colour: 0
+              rollingAverage: false
+                  
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date of death
+              value: date
+              type: date
+              tooltip: Date on which the death occurred
+
+            - label: Daily deaths
+              value: newDeaths60DaysByDeathDate
+              type: numeric
+              tooltip: Daily number of deaths within 60 days of positive test by date of death
+
+            - label: Cumulative deaths
+              value: cumDeaths60DaysByDeathDate
+              type: numeric
+              tooltip: Cumulative total number of deaths within 60 days of positive test by date of death
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
+
+    Within 28 days:
+
+      tabs: 
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Number of deaths
+              value: newDeaths28DaysByDeathDate
+              tooltip: Daily number of deaths within 28 days of positive test by date of death
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Deaths (7-day average)
+              value: newDeaths28DaysByDeathDate
+              tooltip: 7 day rolling average of the daily number of deaths within 28 days of positive test
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3
+                  
+        - heading: Cumulative
+          tabType: chart
+          fields:
+            - label: Number of deaths
+              value: cumDeaths28DaysByDeathDate
+              tooltip: Cumulative total number of deaths within 28 days of positive test by date of death
+              type: bar
+              colour: 0
+              rollingAverage: false
+                  
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date of death
+              value: date
+              type: date
+              tooltip: Date on which the death occurred
+
+            - label: Daily deaths
+              value: newDeaths28DaysByDeathDate
+              type: numeric
+              tooltip: Daily number of deaths within 28 days of positive test by date of death
+
+            - label: Cumulative deaths
+              value: cumDeaths28DaysByDeathDate
+              type: numeric
+              tooltip: Cumulative total number of deaths within 28 days of positive test by date of death
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardDeaths28DaysTimeSeries.md
 
 # {{ EndDevOnlyBlock}}
 
