--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -495,7 +495,7 @@ cards:
 
 # {{ StartDevOnlyBlock }}
 
-  - heading: Daily change in reported cases by specimen date (Dev Only)
+  - heading: Daily change in reported cases by specimen date
     cardType: chart
     fullWidth: true
     locationAware:
